--- a/CarStore/CarStore.DataAccess/CarStore.DataAccess.csproj
+++ b/CarStore/CarStore.DataAccess/CarStore.DataAccess.csproj
@@ -10,8 +10,6 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Repository\" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="3.1.5" />
   </ItemGroup>
 </Project>
