final toouches, compleated project0

--- a/CarStore/CarStore/CarStore.csproj
+++ b/CarStore/CarStore/CarStore.csproj
@@ -3,6 +3,7 @@
   <ItemGroup>
     <ProjectReference Include="..\CarStore.DataAccess\CarStore.DataAccess.csproj" />
     <ProjectReference Include="..\CarStore.Library\CarStore.Library.csproj" />
+    <ProjectReference Include="..\CarStore.Test\CarStore.Test.csproj" />
   </ItemGroup>
 
   <ItemGroup>
