--- a/CarStore/CarStore.DataAccess/CarStore.DataAccess.csproj
+++ b/CarStore/CarStore.DataAccess/CarStore.DataAccess.csproj
@@ -12,4 +12,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="3.1.5" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Repository\" />
+  </ItemGroup>
 </Project>
